fixed logo spacing

--- a/src/assets/styles/cmps/_main-header.scss
+++ b/src/assets/styles/cmps/_main-header.scss
@@ -23,10 +23,13 @@
             text-decoration: none;
             padding: 0.15em;
             border-radius: 0.15em;
-            
-
+            display: flex;
+            gap: 0.4rem;
             &:hover {
                 background-color: rgba(255, 255, 255, 0.3);
+            }
+            svg {
+                align-self: center;
             }
         }
 
